k8s/apps/internal/inbox-zero/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: inbox-zero
  labels:
    app: inbox-zero
