k8s/apps/internal/inbox-zero/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: inbox-zero
  namespace: inbox-zero
  labels:
    app: inbox-zero
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: inbox-zero
