k8s/apps/internal/inbox-zero/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inbox-zero
  namespace: inbox-zero
  labels:
    app: inbox-zero
spec:
  parentRefs:
  - name: external
    namespace: gateway
  hostnames:
  - "inbox-zero.ravil.space"
  rules:
  - backendRefs:
    - name: inbox-zero
      port: 3000
